# backend/openapi/openapi.json
@@ -2833,7 +2833,7 @@
             ],
             "title": "Surname"
           },
-          "accountType": {
+          "userType": {
             "$ref": "#/components/schemas/UserType"
           }
         },
@@ -2842,7 +2842,7 @@
           "id",
           "firstName",
           "surname",
-          "accountType"
+          "userType"
         ],
         "title": "MeSummary"
       },
